--- a/package.json
+++ b/package.json
@@ -51,23 +51,23 @@
     },
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^1.0.1",
-        "@Aetherinox/nox-eslint-base": "^1.0.0",
-        "@types/debug": "^4.1.12",
+        "@aetherinox/eslint-config": "^1.0.0",
+        "@types/debug": "^4.1.5",
         "@types/node": "^20.0.0",
-        "@typescript-eslint/eslint-plugin": "^5.62.0",
-        "@typescript-eslint/parser": "^5.49.0",
-        "ava": "^5.3.1",
-        "eslint": "^8.57.0",
+        "@typescript-eslint/eslint-plugin": "^5.30.7",
+        "@typescript-eslint/parser": "^5.30.7",
+        "ava": "^5.0.1",
+        "eslint": "^8.20.0",
         "eslint-plugin-ava": "^13.2.0",
         "eslint-plugin-import": "^2.23.4",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-promise": "^6.0.0",
         "eslint-plugin-tsdoc": "^0.2.5",
-        "husky": "^8.0.3",
-        "lint-staged": "^13.3.0",
-        "nyc": "^15.1.0",
-        "prettier": "^3.2.5",
+        "husky": "^8.0.1",
+        "lint-staged": "^13.0.3",
+        "nyc": "^15.0.0",
+        "prettier": "^2.0.1",
         "source-map-support": "^0.5.16",
         "ts-node": "^10.0.0",
         "typedoc": "^0.24.1",
@@ -83,7 +83,7 @@
         ]
     },
     "eslintConfig": {
-        "extends": "./node_modules/@Aetherinox/nox-eslint-base/typescript"
+        "extends": "@aetherinox/eslint-config/typescript"
     },
     "funding": [
         {
