--- a/.github/workflows/npm-tests.yml
+++ b/.github/workflows/npm-tests.yml
@@ -28,7 +28,8 @@ jobs:
             - name: "⚙️ Setup Node"
               uses: actions/setup-node@v4
               with:
-                  node-version: ${{ matrix.node-version }}
+                registry-url: 'https://registry.npmjs.org/'
+                node-version: ${{ matrix.node-version }}
 
             - name: "📂 Get NPM Cache Directory"
               id: npm-cache-dir
