chore: set package publish config

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "Aetherinox (https://github.com/Aetherinox)"
     ],
     "publishConfig": {
-        "registry": "https://npm.pkg.github.com/"
+        "access": "public"
     },
     "repository": {
         "type": "git",
