--- a/.github/workflows/npm-tests.yml
+++ b/.github/workflows/npm-tests.yml
@@ -19,75 +19,12 @@ jobs:
                 node-version: [16.x, 18.x, 20.x]
 
         steps:
-            - name: "🛒 Fix Git Checkout Line Endings"
-              run: git config --global core.autocrlf input
-
-            - name: "☑️ Checkout"
-              uses: actions/checkout@v4
-
-            - name: "⚙️ Setup Node"
-              uses: actions/setup-node@v4
-              with:
-                node-version: ${{ matrix.node-version }}
-                registry-url: 'https://registry.npmjs.org/'
-                always-auth: true
-                scope: '@aetherinox'
-              env:
-                NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-            - name: "📂 Get NPM Cache Directory"
-              id: npm-cache-dir
-              run: |
-                  echo "::set-output name=dir::$(npm config get cache)"
-
-            - name: "📑 NPM cache"
-              id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
-              uses: actions/cache@v3.3.1
-              with:
-                  path: ${{ steps.npm-cache-dir.outputs.dir }}
-                  key: ${{ runner.OS }}-node-${{ hashFiles('**/package.json') }}
-                  restore-keys: |
-                      ${{ runner.OS }}-node-
-
             - name: "🔨 Install NPM"
               id: npm-preconfigure
               run: |
-                  npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
+                  npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
                   npm install --engine-strict
                   npm i -g prettier
                   npm -g i eslint-cli
                   npm i eslint --save-dev
                   npx prettier --write .
-
-            - name: "✔️ Lint"
-              run: npm run lint
-
-            - name: "🧰 Run Tests"
-              run: npm run coverage
-
-            - name: "📝 Upload Coverage Reports › Codecov"
-              uses: codecov/codecov-action@v4
-              with:
-                  token: ${{ secrets.CODECOV_TOKEN }}
-                  slug: Aetherinox/xsumjs
-                  env_vars: CI_OS,NODE_VERSION
-              env:
-                  CI_OS: ${{ matrix.os }}
-                  NODE_VERSION: ${{ matrix.node-version }}
-
-            #- name: Upload code coverage to Codecov
-            #  uses: codecov/codecov-action@v3.1.4
-            #  with:
-            #    file: ./coverage/lcov.info
-            #    env_vars: CI_OS,NODE_VERSION
-            #  env:
-            #    CI_OS: ${{ matrix.os }}
-            #    NODE_VERSION: ${{ matrix.node-version }}
-
-    job-test-completed:
-        needs: job-test
-        runs-on: ubuntu-latest
-        steps:
-            - name: "☑️ Tests Complete"
-              run: |
-                'echo Tests passed'
