--- a/.github/workflows/npm-tests.yml
+++ b/.github/workflows/npm-tests.yml
@@ -19,6 +19,15 @@ jobs:
                 node-version: [16.x, 18.x, 20.x]
 
         steps:
+            - name: "☑️ Checkout"
+              uses: actions/checkout@v4
+
+            - name: "⚙️ Setup Node"
+              uses: actions/setup-node@v4
+              with:
+                node-version: ${{ matrix.node-version }}
+                registry-url: 'https://registry.npmjs.org/'
+
             - name: "🔨 Install NPM"
               id: npm-preconfigure
               run: |
