--- a/.github/workflows/npm-tests.yml
+++ b/.github/workflows/npm-tests.yml
@@ -52,8 +52,7 @@ jobs:
             - name: "🔨 Install NPM"
               id: npm-preconfigure
               run: |
-                  npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
-                  npm install --engine-strict
+                  npm ci
                   npm i -g prettier
                   npm -g i eslint-cli
                   npm i eslint --save-dev
