--- a/.github/workflows/npm-tests.yml
+++ b/.github/workflows/npm-tests.yml
@@ -90,4 +90,4 @@ jobs:
         steps:
             - name: "☑️ Tests Complete"
               run: |
-                'echo Tests passed'
+                echo 'Tests passed'
