--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,78 +5,113 @@ on:
     workflow_dispatch:
 
 jobs:
-    test:
-        runs-on: ${{ matrix.os }}
-        strategy:
-            matrix:
-                os: [windows-latest, macOS-latest, ubuntu-latest]
-                node-version: [16.x, 18.x, 20.x]
 
-        steps:
-            - name: Fix git checkout line endings
-              run: git config --global core.autocrlf input
+    # ---------------------------------------------------------------------------------------
+    #   JOB > INITIALIZE
+    # ---------------------------------------------------------------------------------------
 
-            - name: 'Checkout'
-              uses: actions/checkout@v3.5.3
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v3.6.0
-              with:
-                  node-version: ${{ matrix.node-version }}
-
-            - name: Get npm cache directory
-              id: npm-cache-dir
-              run: |
-                  echo "::set-output name=dir::$(npm config get cache)"
-
-            - name: NPM cache
-              id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
-              uses: actions/cache@v3.3.1
-              with:
-                  path: ${{ steps.npm-cache-dir.outputs.dir }}
-                  key: ${{ runner.OS }}-node-${{ hashFiles('**/package.json') }}
-                  restore-keys: |
-                      ${{ runner.OS }}-node-
-
-            - name: Install
-              run: npm install --engine-strict
-
-            - name: 'Preconfigure'
-              id: npm-preconfigure
-              run: |
-                  npm i -g prettier
-                  npm -g i eslint-cli
-                  npm i eslint --save-dev
-                  npx prettier --write .
-
-            - name: Lint
-              run: npm run lint
-
-            - name: Testsuite
-              run: npm run coverage
-
-            - name: Upload coverage reports to Codecov
-              uses: codecov/codecov-action@v4.0.1
-              with:
-                  token: ${{ secrets.CODECOV_TOKEN }}
-                  slug: Aetherinox/xsumjs
-                  env_vars: CI_OS,NODE_VERSION
-              env:
-                  CI_OS: ${{ matrix.os }}
-                  NODE_VERSION: ${{ matrix.node-version }}
-
-            #- name: Upload code coverage to Codecov
-            #  uses: codecov/codecov-action@v3.1.4
-            #  with:
-            #    file: ./coverage/lcov.info
-            #    env_vars: CI_OS,NODE_VERSION
-            #  env:
-            #    CI_OS: ${{ matrix.os }}
-            #    NODE_VERSION: ${{ matrix.node-version }}
-
-    # This is primarily to have a required status check
-    test-completed:
-        needs: test
+    job-initialize:
+        name: "📦 Publish › Initialize"
         runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
         steps:
-            - run: 'echo Testsuite passed'
+
+        # ---------------------------------------------------------------------------------------
+        #   Job > Initialize > Checkout
+        # ---------------------------------------------------------------------------------------
+
+        - name: "☑️ Checkout"
+          uses: actions/checkout@v4
+
+    # ---------------------------------------------------------------------------------------
+    #   Job > Publish > NPMJS
+    # ---------------------------------------------------------------------------------------
+
+    job-publish-npm:
+        name: "📦 Publish › NPM"
+        needs: job-initialize
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
+        steps:
+
+        # ---------------------------------------------------------------------------------------
+        #   Job > Publish > Npmjs > Checkout
+        # ---------------------------------------------------------------------------------------
+
+        - name: "☑️ Checkout"
+          id: publish-npmjs-checkout
+          uses: actions/checkout@v4
+
+        # ---------------------------------------------------------------------------------------
+        #   Job > Publish > Npmjs > Setup Node
+        # ---------------------------------------------------------------------------------------
+
+        - name: "⚙️ Setup Node"
+          id: publish-npmjs-node-setup
+          uses: actions/setup-node@v4
+          with:
+            node-version: '20.x'
+            registry-url: 'https://registry.npmjs.org/'
+            always-auth: true
+            scope: '@aetherinox'
+
+        # ---------------------------------------------------------------------------------------
+        #   Job > Publish > Npmjs > NPM Actions
+        # ---------------------------------------------------------------------------------------
+
+        - name: "📦 NPM Actions"
+          id: publish-npmjs-node-actions
+          run: |
+            npm ci
+            npm publish
+          env:
+            NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+    # ---------------------------------------------------------------------------------------
+    #   Job > Publish > Github
+    # ---------------------------------------------------------------------------------------
+
+    job-publish-ghnpm:
+        name: "📦 Publish › Github NPM"
+        needs: job-initialize
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
+        steps:
+
+        # ---------------------------------------------------------------------------------------
+        #   Job > Publish > Github > Checkout
+        # ---------------------------------------------------------------------------------------
+
+        - name: "☑️ Checkout"
+          id: publish-ghnpm-checkout
+          uses: actions/checkout@v4
+
+        # ---------------------------------------------------------------------------------------
+        #   Job > Publish > Github > Setup Node
+        # ---------------------------------------------------------------------------------------
+
+        - name: "⚙️ Setup Node"
+          id: publish-ghnpm-node-setup
+          uses: actions/setup-node@v4
+          with:
+            node-version: '20.x'
+            registry-url: https://npm.pkg.github.com/
+            scope: '@aetherinox'
+
+        # ---------------------------------------------------------------------------------------
+        #   Job > Publish > Github > NPM Actions
+        # ---------------------------------------------------------------------------------------
+
+        - name: "📦 NPM Actions"
+          id: publish-ghnpm-node-actions
+          run: |
+            npm ci
+            npm publish
+          env:
+            NODE_AUTH_TOKEN: ${{ secrets.SELF_TOKEN_CL }}
