--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,7 +14,7 @@ jobs:
         name: "📦 Publish › Initialize"
         runs-on: ubuntu-latest
         outputs:
-          package_version: ${{ steps.task_initialize_package_version.outputs.current-version }}
+          package_version: ${{ steps.task_initialize_package_getversion.outputs.current-version }}
         permissions:
             contents: read
             packages: write
@@ -36,27 +36,45 @@ jobs:
                 fetch-depth: 0
 
             # ---------------------------------------------------------------------------------------
-            #   Job > Initialize > Get NPM Version
-            # ---------------------------------------------------------------------------------------
-
-            - name: get-npm-version
-              id: task_initialize_package_version
-              uses: martinbeentjes/npm-get-version-action@v1.3.1
-
-            - name: "Show Current Version of NPM"
-              id: task_initialize_package_version_debug
-              run: |
-                echo ${{ steps.task_initialize_package_version.outputs.current-version}}
-
-            # ---------------------------------------------------------------------------------------
             #   Get version from package.json VERSION value
             # ---------------------------------------------------------------------------------------
 
             - name: Get Package Version
-              id: get_package_version
-              run: echo "PACKAGE_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
+              id: task_initialize_package_getversion
+              run: |
+                VER=$(cat package.json | jq -r '.version')
+                echo "PACKAGE_VERSION=$VER" >> $GITHUB_OUTPUT
 
             - name: "🪪 .ENV › Read"
               id: dotenv-output
               run: |
                 echo "VERSION: ${{ env.PACKAGE_VERSION }}"
+
+    dist-release:
+      name: >-
+        📦 Github › Release
+      runs-on: ubuntu-latest
+      needs: [ job-initialize, job-initialize, job-initialize ]
+      env:
+        PACKAGE_VERSION: ${{ needs.job-initialize.outputs.package_version }}
+      if: |
+        always()
+        && contains(needs.*.result, 'success')
+        && !contains(needs.*.result, 'failure')
+      permissions:
+        contents: write
+      steps:
+
+          # ---------------------------------------------------------------------------------------
+          #   Dist Releases > Checkout
+          # ---------------------------------------------------------------------------------------
+
+          - name: "☑️ Checkout"
+            uses: actions/checkout@v4
+            with:
+              fetch-depth: 0
+
+          - name: "🪪 Test Next Job Version"
+            id: dotenv-output
+            run: |
+              echo "VERSION: ${{ env.PACKAGE_VERSION }}"
