--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,7 +14,7 @@ jobs:
         name: "📦 Publish › Initialize"
         runs-on: ubuntu-latest
         outputs:
-          package_version: ${{ steps.task_initialize_package_getversion.outputs.current-version }}
+          package_version: ${{ steps.task_initialize_package_getversion.outputs.PACKAGE_VERSION }}
         permissions:
             contents: read
             packages: write
