--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "target": "es2020",
         "outDir": "dist",
         "lib": ["es2020"],
-        "sourceMap": true,
+        "sourceMap": false,
         "rootDir": ".",
         "strict": true,
         "esModuleInterop": true,
