--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -75,7 +75,7 @@ jobs:
         outputs:
           package_version: ${{ steps.task_initialize_package_getversion.outputs.PACKAGE_VERSION }}
         permissions:
-            contents: read
+            contents: write
             packages: write
         steps:
 
@@ -125,7 +125,7 @@ jobs:
           && contains(needs.*.result, 'success')
           && !contains(needs.*.result, 'failure')
         permissions:
-            contents: read
+            contents: write
             packages: write
         steps:
 
